Thu Nov 17 13:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Borland/ChatClient.mpc:
          New MPC file, add vcl=1 to your default.features and pass VCL=1
          to the make flags to build this

        * examples/Borland/README:
          Updated

Thu Nov 17 12:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Borland/ChatClient.bpr:
        * examples/Borland/ChatClient.res:
          Updated to BCB6 format

Wed Nov 16 21:53:08 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/lex.yy.cpp.diff:

          Since the change of

          Wed Nov 16 11:23:15 2005  Jeff Parsons  <j.parsons@vanderbilt.edu>

          checked in a version of lex.yy.cpp that had been generated
          elsewhere, regenerated this file with the version of flex
          that's on tango.dre.vanderbilt.edu, and updated the
          corresponding diff file.

Wed Nov 16 14:12:08 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * tests/CSD_Strategy_Tests/TP_Foo_B/Foo_B.idl:
        * tests/CSD_Strategy_Tests/TP_Test_1/run_test.pl:

          Rolled back the changes
          "Sun Nov 13 12:15:58 USMST 2005  Yan Dai  <dai_y@ociweb.com>"
          made for debugging test failures on VxWorks build.

        * NEWS:

          Added description for CSD feature.

Wed Nov 16 11:23:15 2005  Jeff Parsons  <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/idl.yy.cpp:

          Applied patches submitted by Thomas Lockhart
          <Thomas.Lockhar@jpl.nasa.gov> to enable the IDL compiler's
          lexer to handle extra numeric fields produced by the gcc
          4.0.1 preprocessor. Closes [BUGID:2294].

Wed Nov 16 09:14:21 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Current_Impl.cpp:

	  Include "tao/ORB_Constants.h" to pull TAO::VMCID constant.

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_CredentialsAcquirer.h